2004-06-18  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>

	* tree-ssa.c (raise_value): Removed.
	(get_eq_name, check_phi_redundancy): New functions.
	(kill_redundant_phi_nodes): Use standard ssa minimalization algorithm.

2004-06-18  Roger Sayle  <roger@eyesopen.com>

	* fold-const.c (fold) <UNORDERED_EXPR, ORDERED_EXPR, UNLT_EXPR,
	UNLE_EXPR, UNGT_EXPR, UNGE_EXPR, UNEQ_EXPR, LTGT_EXPR>: Add
	constant folding for unordered comparison tree nodes.  If both
	operands are real constants, call fold_relational_const.  If either
	operand is a NaN, evaluate the other for side-effects and return a
	constant.  Optimize (double)float1 CMP (double)float2 into the
	equivalent float1 CMP float2.
	(nondestructive_fold_binary_to_constant) <UNORDERED_EXPR,
	ORDERED_EXPR, UNLT_EXPR, UNLE_EXPR, UNGT_EXPR, UNGE_EXPR, UNEQ_EXPR,
	LTGT_EXPR>: Call fold_relational_const for constant operands.
	(fold_relational_const): Add support for unordered comparison tree
	nodes.  Don't constant fold "ordered" floating point comparisons
	against NaN if when flag_trapping_math is set.

2004-06-19  Jakub Jelinek  <jakub@redhat.com>

	* fold-const.c (build_range_check): If !in_p and recursive call
	fails, exit immediately.  If high - low overflows and etype is
	a signed type, retry with unsigned etype.
	(merge_ranges): If !in0_p and !in1_p, handle even range2 adjacent
	to range1 at TYPE_MAX_VALUE and TYPE_MIN_VALUE.

2004-06-18  Richard Henderson  <rth@redhat.com>

	* c-gimplify.c (gimplify_condition): Remove.
	(gimplify_c_loop, gimplify_if_stmt, gimplify_switch_stmt): Don't
	call it.

2004-06-18  Richard Henderson  <rth@redhat.com>

	* tree-eh.c (decide_copy_try_finally): Fix scaling of copy and
	switch estimates.

2004-06-18  Andrew Pinski  <pinskia@physics.uc.edu>

	* config/i386/darwin.h (HOT_TEXT_SECTION_NAME): Define.
	(NORMAL_TEXT_SECTION_NAME): Define.
	(UNLIKELY_EXECUTED_TEXT_SECTION_NAME): Define.
	(SECTION_FORMAT_STRING): Define.

2004-06-18  Steven Bosscher  <stevenb@suse.de>
