@@ -1,3 +1,9 @@
+2004-06-19  Andrew Pinski  <apinski@apple.com>
+
+	* toplev.c (wrapup_global_declarations): Do not check
+        TREE_SYMBOL_REFERENCED of the DECL_ASSEMBLER_NAME but check
+        cgraph_varpool_node's needed field.
+
 2004-06-18  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* tree-ssa.c (raise_value): Removed.
